Bulma imported, customized, and utilized

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li><a routerLink="/explore">Explore</a></li>
+  <li><a routerLink="/explore" class="is-size-3">Explore</a></li>
 </ul>
 
 <router-outlet></router-outlet>
