--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -1,1 +1,8 @@
-<p>explore works!</p>
+<div class="container mt-6 px-6">
+    <p class = "is-size-3">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Sint dolor illum, consequatur ex perspiciatis dicta voluptas, 
+        provident eveniet eligendi in sapiente? Accusamus quaerat 
+        aperiam ab veniam assumenda voluptates repudiandae dicta!
+    </p>
+</div>
