Ang. Material integrated and Mat-Sidebar added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<ul>
-  <li><a routerLink="/explore" class="is-size-3">Explore</a></li>
-</ul>
+<!-- <ul pt-6>
+  <li><a routerLink="/explore" class="is-size-4">Explore</a></li>
+</ul> -->
 
-<router-outlet></router-outlet>
+<app-shell>
+  <router-outlet></router-outlet>
+</app-shell>
+
+<!-- <router-outlet></router-outlet> -->
