--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,42 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$bulmaMaterial-app-primary: mat-palette($mat-indigo);
+$bulmaMaterial-app-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$bulmaMaterial-app-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$bulmaMaterial-app-theme: mat-light-theme((
+  color: (
+    primary: $bulmaMaterial-app-primary,
+    accent: $bulmaMaterial-app-accent,
+    warn: $bulmaMaterial-app-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($bulmaMaterial-app-theme);
+
 /* You can add global styles to this file, and also import other style files */
 
 @import "main-styles.scss"; // Custom Bulma files which we will create
 @import "../node_modules/bulma/bulma.sass";
 
-// html, body {
-//     background-color: rgb(27, 27, 27);
-//     color: wheat;
-// }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
