--- a/src/app/shared/shell/shell.component.html
+++ b/src/app/shared/shell/shell.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-container has-text-primary has-background-dark">
     <!-- SideNav -->
 
     <mat-sidenav #drawer class="sidenav" fixedInViewport
